[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
com.workspace = true

anyhow.workspace = true
clap.workspace = true
tarpc.workspace = true
tokio.workspace = true
futures.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true

toml = { version = "1.1.2" }
hostname = "0.4"
